kubernetes/catalog/wallos/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/devzwf/unraid-docker-templates/main/wallos.xml
# Category: Productivity
# Stars: 28 | Downloads: 6339877
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: wallos
  labels:
    app.kubernetes.io/name: wallos
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wallos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallos
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: wallos
          image: bellamy/wallos:latest
          ports:
            - containerPort: 80
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: wallos-data-0
              mountPath: "/var/www/html/db"
            - name: tmp-var-www-html-images-uploads-logos
              mountPath: "/var/www/html/images/uploads/logos"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: wallos-data-0
        persistentVolumeClaim:
          claimName: wallos-data-0
      - name: tmp-var-www-html-images-uploads-logos
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: wallos
  namespace: wallos
  labels:
    app.kubernetes.io/name: wallos
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: wallos
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: webui
  type: ClusterIP
