kubernetes/catalog/wallos/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wallos
  namespace: wallos
  labels:
    app.kubernetes.io/name: wallos
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wallos.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: wallos
          port: 80
  tls:
    secretName: int-rlservers-com-tls
